# wac

./: Cargo.toml  README.md  TODO.md  TODO2.md  out.txt
examples/: lex.rs  wasmer.rs
prelude/: 00malloc.wac  01memory.wac  02imports.wac
sample/: foo.wac
sample/chip8/: main.wac
sample/perftests/: i32str.wac
sample/tests/: README.md  main.wac
sample/tests/basic/: arith.wac  enum.wac  func.wac  int.wac  lang.wac  str.wac  trait.wac  type.wac
samples/: foo.wac  hello.wac
src/: ast.rs  cgen.rs  debug.rs  er.rs  exc.rs  exec.rs  imp.rs  imports.rs  ir.rs  lexer.rs  lib.rs  llcompiler.rs  llir.rs  llparser.rs  parsef.rs  parser.rs  prelude.wac  rn.rs  run.rs  runners.rs  scope.rs  sink.rs  solver.rs  span.rs  start.rs  tmap.rs  tr.rs  wc.rs  wfs.rs
src/prelude/: assert.wac  bool.wac  buffer.wac  id.wac  index.wac  int.wac  lang.wac  list.wac  malloc.wac  mod.rs  ops.wac  panic.wac  record.wac  stack.wac  str.wac  trait.wac  type.wac
src/tr/: expr.rs  fcall.rs  func.rs  guess.rs  mod.rs  ops.rs  out.rs  retain.rs  scope.rs  typ.rs
stdlib/0prelude/: imports.wac
stdlib/0prelude/impls/: bytes.wac  id.wac  list.wac  malloc.wac  record.wac  stack.wac  str.wac  trait.wac  type.wac
stdlib/0prelude/ops/: basic.wac
stdlib/0prelude/traits/: arith.wac  cmp.wac  container.wac  conv.wac  raw.wac
stdlib/afuncs/: README.md  bytes.wac  i32.wac  i64.wac  int.wac  list.wac  str.wac
stdlib/io/: file.wac
stdlib/prelude/: assert.wac  bytes.wac  imports.wac  int.wac  ops.wac  panic.wac  print.wac  type.wac
stdlib/prelude/impls/: README.md  bytes.wac  int.wac  (+1 more)
(+14 files in other folders)
