[package]
name = "wac"
version = "0.0.1"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/wac"
readme = "README.md"
description = "A small C-like language that compiles to webassembly, for joy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wabt = "0.9"
wasmer-runtime = "0.17"
anyhow = "1.0"
num-derive = "0.3"
num-traits = "0.2"
